# ReserveTable

./: .env.sample  .gitignore  Dockerfile  README.md  create_administrator_group.py  create_db.py  create_initial_content.py  create_moderators_group.py  create_sample_menu.py  create_tables.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Core/: views.py
bookings/: admin.py  forms.py  models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_sitecontent_content_type.py
core/templatetags/: content_tags.py
static/css/: main.css
tables/: admin.py  models.py  urls.py  views.py
tables/migrations/: 0001_initial.py
templates/Bookings/: booking_confirmation_email.html  booking_notification_admin.html
templates/Core/: about.html  index.html
templates/Tables/: tables_management.html
templates/Users/: password_reset_confirm.html  password_reset_email.html
templates/bookings/: admin_panel.html  booking_confirmation_email.html  booking_detail.html  booking_notification_admin.html  bookings.html
templates/core/: about.html  contacts.html  index.html  menu.html
templates/includes/: admin_navbar.html  footer.html  header.html
templates/tables/: tables_management.html
templates/users/: password_reset_confirm.html  password_reset_email.html  profile.html  (+2 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
victuals/: admin.py  apps.py  models.py  urls.py  views.py
(+7 files in other folders)
